--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<p>Hello 大家好</p>
-<p>我是BackTo2012，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> 我是BackTo2012，这是我的个人网站。 </title>
+    </head>
+    <body>
+        <ul>
+        <li> <a href="https://www.zhihu.com/people/yan-14-25-47">知乎</a> </li>
+        <li> <a href="https://blog.csdn.net/m0_53232957?spm=1001.2014.3001.5343">我的博客(已经不更新了,以后准备在知乎更新)</a> </li>
+        </ul>
+    </body>
+</html>
 
-<ul>
-  <li> <a href="https://www.zhihu.com/people/yan-14-25-47">知乎</a> </li>
-  <li> <a href="https://blog.csdn.net/m0_53232957?spm=1001.2014.3001.5343">我的博客(已经不更新了,以后准备在知乎更新)</a> </li>
-</ul>
